2018-10-23    <kennethj@gagarin.uit.no>
    * ADquickSync.py:   updated to read json from changelog.
2018-10-21    <kennethj@gagarin.uit.no>
    * ad_export_autogroups_undervisning.py:  updated to read utf-8 instead of iso-8859-1
    * export_ad.py : updated to read utf-8 instead of iso-8859-1
    * export_ldap.py : updated to read utf-8 instead of iso-8859-1. also fixed 2 parameter name changes
    * export_oid.py:  updated to read utf-8 instead of iso-8859-1
    * export_securimaster.py: updated to read utf-8 instead of iso-8859-1
    * generate_groups_ldif.py: updated to read utf-8 instead of iso-8859-1
    * generate_temp_employee_xml.py: updated to read utf-8 instead of iso-8859-1

2018-10-21    <kennethj@gagarin.uit.no>
    * generate_kurs_ldif.py:  updated to read utf-8 instead of iso-8859-1

2018-10-21    <kennethj@gagarin.uit.no>
    * import_tlf.py:  updated to write utf-8 encoded strings to FS

2018-10-21    <kennethj@gagarin.uit.no>
    * update_displayname.py:  updated to write utf-8 encoded strings to FS

2018-10-21    <kennethj@gagarin.uit.no>
    * wipe.py:  updated to handle json format in changelog instead of pickle

2018-10-21    <kennethj@gagarin.uit.no>
    * import_SYSX.py: updated to handle ou file on utf-8 format

2018-10-21    <kennethj@gagarin.uit.no>
    * import_sito.py: updated to handle ou file on utf-8 format


2018-10-21    <kennethj@gagarin.uit.no>
    * generate_paga_persons.py Updated to handle UTF-8 from FS

2018-10-21    <kennethj@gagarin.uit.no>
    * import_PAGA.py Updated to handle UTF-8 from FS

2018-10-20    <kennethj@gagarin.uit.no>
    * merge_xml_files.py Updated to handle UTF-8 from FS
2018-10-20    <kennethj@gagarin.uit.no>
    * import_FS.py      updated to handle UTF-8 from FS.

2018-10-18    <kennethj@gagarin.uit.no>
    * generate_OU.py	Updated to handle UTF-8 from FS
2018-09-13    <cerebrum@gagarin.uit.no>