@@ -57,7 +57,7 @@ from sets import Set
 import cerebrum_path
 import cereconf
 from Cerebrum.Utils import Factory
-from Cerebrum.Utils import sendmail
+from Cerebrum.utils.email import sendmail
 from Cerebrum import Errors
 from Cerebrum.modules.no.Stedkode import Stedkode
 from Cerebrum.Constants import _CerebrumCode, _SpreadCode
